Fix Java 17 support.